  Changes:
    - Stop regrowth deleting cargo pods at center of map. (By marking the center chunks as permanent.)
    - Change surface regrowth checkboxes to be enabled/disabled by the global setting to make it obvious that they are dependent on the global setting.
  Bugfixes:
    - Fix regrowth surface setting not respecting previous setting state when surface is first created.
    - Remove offline enemy attack error messages. (Not really a bug, just false error messages.)
  Info:
    - Add RU translation (thanks KORESHon!)
---------------------------------------------------------------------------------------------------
Version: 2.1.12
Date: 2024-11-13
  Bugfixes:
    - Change technology research notification to use localized name.
  Info:
    - Add warnings regarding which surfaces are currently supported for spawning.
---------------------------------------------------------------------------------------------------
Version: 2.1.11
Date: 2024-11-12
  Bugfixes:
    - Fixes a crash due to a migration issue if spawns were allowed on not-yet-supported planets.
---------------------------------------------------------------------------------------------------
Version: 2.1.10
Date: 2024-11-11
  Major Features:
    - Adding support for secondary spawns on Fulgora. This is still VERY experimental and will likely have some hidden issues. Please report any bugs you find. If you want to use this feature, you must go into the in game GUI and check the enable secondary spawns checkbox for Fulgora specifically.
    - Major work done under the hood to support secondary spawns. Depending on how Fulgora testing goes, I will add support for other planets soon.
  Minor Features:
    - Added some new commands: "oarc-wheres-my-cargo-pod", "oarc-reroll-spawn", "oarc-trigger-cleanup". See the in game help text for info.